# Tromboneless

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dox.sh  doxygen_config  makeTromboneless.sh
.github/ISSUE_TEMPLATE/: roadmap-template.md
App/: CMakeLists.txt  Notes.md
App/inc/: CustomStyles.h  CustomStyles.hpp  Layout.h  Layout.hpp  Panels.hpp  TrombonelessJuce.hpp  Widgets.h  Widgets.hpp  juceConfig.hpp  profiler.h
App/shared/: CMakeLists.txt  tromboneless_data.cpp  tromboneless_data.h  tromboneless_data.hpp  trombonesless_data.cpp
App/src/: CustomStyles.cpp  Layout.cpp  Panels.cpp  TrombonelessJuce.cpp  Widgets.cpp  main.cpp  profiler.cpp
App/tests/: testApp.cpp  testCustomStyles.cpp  testCustomStyles.hpp  testLayout.cpp  testPanels.cpp  testPanels.hpp  testWidgets.cpp  testWidgets.hpp  unitTestMacros.hpp
Arduino/: README.md
Arduino/tromboneless_breathOnly/: tromboneless_breathOnly.ino
Arduino/tromboneless_breathOnly/tromboneless_breathOnly/: tromboneless_breathOnly.ino
Arduino/tromboneless_embouchureOnly/: expFilter.h  toneGenerator.h  tromboneless_embouchureOnly.ino
Core/: CMakeLists.txt  CMakeLists2.txt  CMakeLists_adc.txt  main.h
Core/cap1188_test/: CMakeLists.txt  cap1188_simple_test.cpp  cap1188_test.cpp
Core/drivers/: pins.h
Core/inc/: main.h
Core/include/: AmplitudeMapper.hpp  CoreWrapper.hpp  MIDIMessageBuilder.hpp  MidiCoordinator.hpp  MidiMessageBuilder.hpp  PitchMapper.hpp  USBMidi.hpp  audioRender.hpp  envelope.hpp  eventHandler.hpp  hpf.hpp  main.hpp  synth.hpp  tromboneSynth.hpp
Core/include/drivers/: USBMidi.hpp  ads1115rpi.h  audio_output.hpp  cap1188_registers.hpp  cap_sensor.hpp  i2c_bus.hpp  pressure_sensor.hpp  tof_sensor.hpp  tof_sensor_header_notes.txt  tof_sensor_hpp_notes.txt
Core/src/: AmplitudeMapper.cpp  CoreWrapper.cpp  MIDIMessageBuilder.cpp  MidiCoordinator.cpp  MidiMessageBuilder.cpp  PitchMapper.cpp  USBMidi.cpp  ads1115.cpp  ads1115rpi.cpp  audioRender.cpp  cap1188_test.cpp  envelope.cpp  eventHandler.cpp  main.cpp  main_notes.txt  synth.cpp  test_vl53l1_uld.cpp  tromboneSynth.cpp
Core/src/drivers/: USBMidi.cpp  ads1115rpi.cpp  audio_output.cpp  cap_sensor.cpp  i2c_bus.cpp  tof_sensor.cpp  tof_sensor_cpp_notes.txt
Core/temp_tests/: CMakeLists.txt  midi_test.cpp  rendering_internal_synth.cpp
Core/tests/: CMakeLists.txt  external_synth_bend_test.cpp  internal+external_bend_test.cpp  internal_synth_bend_test.cpp  midi_test.cpp  rendering_internal_synth.cpp  synth_audio_test.cpp  synth_internal_bend_test.cpp  testCoordinator.cpp  testCore.cpp  testCoreWrapper.cpp  testEnvelope.cpp  testI2C_Bus.cpp  testPressureSensor.cpp  testSynth.cpp  testSynth.hpp  testToFSensor.cpp  unitTestMacros.hpp
Documentation/: dox.sh  doxygen_config
Documentation/Hardware/: Hardware_Notes.md  Mouthpiece_Construction_G.md
Documentation/KiCad/: README.md
Documentation/KiCad/tromboneless_pcb/: fp-info-cache  sym-lib-table  tromboneless-eagle-import.kicad_sym  tromboneless.kicad_pcb  tromboneless.kicad_prl  tromboneless.kicad_pro  tromboneless.kicad_sch  ~tromboneless.kicad_sch.lck
Documentation/html/: AmplitudeMapper_8hpp.html  AmplitudeMapper_8hpp__incl.dot  AmplitudeMapper_8hpp_source.html  App_2src_2main_8cpp.html  App_2src_2main_8cpp__incl.dot  CoreWrapper_8cpp.html  CoreWrapper_8cpp__incl.map  CoreWrapper_8cpp__incl.md5  CoreWrapper_8hpp.html  CoreWrapper_8hpp__dep__incl.map  CoreWrapper_8hpp__dep__incl.md5  CoreWrapper_8hpp__incl.map  CoreWrapper_8hpp__incl.md5  CoreWrapper_8hpp_source.html  Core_2src_2main_8cpp.html  Core_2src_2main_8cpp__incl.dot  CustomStyles_8cpp.html  CustomStyles_8cpp__incl.dot  CustomStyles_8cpp__incl.map  CustomStyles_8cpp__incl.md5  CustomStyles_8hpp.html  CustomStyles_8hpp__dep__incl.dot  CustomStyles_8hpp__dep__incl.map  CustomStyles_8hpp__dep__incl.md5  CustomStyles_8hpp__incl.dot  CustomStyles_8hpp__incl.map  CustomStyles_8hpp__incl.md5  CustomStyles_8hpp_source.html  Firmware__Notes_8md.html  Hardware__Notes_8md.html  Layout_8cpp.html  Layout_8cpp__incl.dot  Layout_8cpp__incl.map  Layout_8cpp__incl.md5  Layout_8hpp.html  Layout_8hpp__dep__incl.dot  Layout_8hpp__dep__incl.map  Layout_8hpp__dep__incl.md5  Layout_8hpp__incl.dot  Layout_8hpp__incl.map  (+1059 more)
Documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  (+152 more)
Documentation/latex/: AmplitudeMapper_8hpp.tex  AmplitudeMapper_8hpp.tex.tmp  AmplitudeMapper_8hpp__incl.dot  AmplitudeMapper_8hpp_source.tex  App_2src_2main_8cpp.tex  App_2src_2main_8cpp__incl.dot  CoreWrapper_8cpp.tex  CoreWrapper_8cpp__incl.eps  CoreWrapper_8cpp__incl.md5  CoreWrapper_8hpp.tex  CoreWrapper_8hpp__dep__incl.eps  CoreWrapper_8hpp__dep__incl.md5  CoreWrapper_8hpp__incl.eps  CoreWrapper_8hpp__incl.md5  CoreWrapper_8hpp_source.tex  Core_2src_2main_8cpp.tex  Core_2src_2main_8cpp__incl.dot  CustomStyles_8cpp.tex  CustomStyles_8cpp__incl.dot  CustomStyles_8cpp__incl.eps  CustomStyles_8cpp__incl.md5  CustomStyles_8hpp.tex  CustomStyles_8hpp__dep__incl.dot  CustomStyles_8hpp__dep__incl.eps  CustomStyles_8hpp__dep__incl.md5  CustomStyles_8hpp__incl.dot  CustomStyles_8hpp__incl.eps  CustomStyles_8hpp__incl.md5  CustomStyles_8hpp_source.tex  Firmware__Notes_8md.tex  Hardware__Notes_8md.tex  Layout_8cpp.tex  Layout_8cpp.tex.tmp  Layout_8cpp__incl.dot  Layout_8cpp__incl.eps  Layout_8cpp__incl.md5  Layout_8hpp.tex  Layout_8hpp__dep__incl.dot  Layout_8hpp__dep__incl.eps  Layout_8hpp__dep__incl.md5  (+618 more)
Firmware/: CMakeLists.txt  Firmware_Notes.md  main.cpp
Firmware/Drivers/: ADS1115.cpp  Pin_Definitions.h
Firmware/inc/: main.h
Firmware/src/: main.cpp
Notes/: IP_address.md  IP_address.txt
Shared/: tromboneless_data.hpp
Software/: CMakeLists.txt  main.cpp
Software/include/: Application.h  MainFrame.h
Software/src/: Application.cpp  MainFrame.cpp
(+3 files in other folders)
